Se completo el Login, Constructores y setters por mejorar segun necesidad