@@ -9,23 +9,48 @@ package Clases;
  * @author apnil
  */
 public class Usuario{
+    private int IdUsuario;
     private String nombreUsuario;
     private String contraseña;
     private String rol;
 
+    public Usuario(String nombreUsuario, String contraseña, String rol) {
+        this.nombreUsuario = nombreUsuario;
+        this.contraseña = contraseña;
+        this.rol = rol;
+    }
+
+    public Usuario(int IdUsuario, String nombreUsuario, String contraseña, String rol) {
+        this.IdUsuario = IdUsuario;
+        this.nombreUsuario = nombreUsuario;
+        this.contraseña = contraseña;
+        this.rol = rol;
+    }
+    
     public String getNombreUsuario() {
         return nombreUsuario;
     }
 
-    public void setNombreUsuario(String nombreUsuario)throws Exception {
-        if (nombreUsuario == null || nombreUsuario.isBlank()) {
-            throw new Exception("El nombre de usuario no puede estar vacío.");
+    public String getContraseña() {
+        return contraseña;
+    }
+
+    public String getRol() {
+        return rol;
+    }
+
+    public void setNombreUsuario(String nombreUsuario) {
+        if (nombreUsuario == null || nombreUsuario.trim().isEmpty()) {
+            throw new IllegalArgumentException("El nombre no puede estar vacío.");
         }
         this.nombreUsuario = nombreUsuario;
     }
 
-    public String getContraseña() {
-        return contraseña;
+    public void setRol(String rol) {
+        if (rol == null || rol.trim().isEmpty()) {
+            throw new IllegalArgumentException("El nombre no puede estar vacío.");
+        }
+        this.rol = rol;
     }
 
     public void setContraseña(String contraseña) throws Exception {
@@ -36,19 +61,5 @@ public class Usuario{
             throw new Exception("La contraseña debe tener al menos 6 caracteres.");
         }
         this.contraseña = contraseña;
-    }
-
-    public String getRol() {
-        return rol;
-    }
-
-    public void setRol(String rol)throws Exception {
-        if (rol == null || rol.isBlank()) {
-            throw new Exception("Debe especificar el rol del usuario.");
-        }
-        this.rol = rol;
-    }
-    public boolean verificarContraseña(String ingreso) {
-        return this.contraseña.equals(ingreso);
     }
 }
